--- a/app/globals.css
+++ b/app/globals.css
@@ -44,6 +44,10 @@ html, body {
   height: 100% !important;
 }
 
+.custom-tabs .ant-tabs-nav::before {
+  border-bottom: none !important;
+}
+
 /*============ Loader ============*/
 
 .loader {
